Closed Bug 406019 Opened 17 years ago Closed 17 years ago

EVENT_ALERT and EVENT_MENUPOPUPSTART broken from bug 395909

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: gibson.becky, Assigned: aaronlev)

References

(Blocks 1 open bug, )

Details

(Keywords: access, regression)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007112905 Minefield/3.0b2pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007112905 Minefield/3.0b2pre

Load http://www.weba11y.com/AjaxDemo/stockhome.html and select the third radio button (Display Updated Information via non intrusive notification every 10 seconds....) and press submit.  A new page will load and a floating div will be created and displayed every 10 seconds with a new stock price.  After a few seconds the floating div is hidden and the div removed from the DOM.  Using JAWS 9 in Firefox 2.0.0.10 this alert will be spoken each time it is displayed.  In minefield the alert is not spoken.  The Dojo tooltips (http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/test_Tooltip.html - note this is a nightly build status could change) which are implemented via ARIA alerts are spoken by JAWS in minefield.  

Reproducible: Always

Steps to Reproduce:
1.Load http://www.weba11y.com/AjaxDemo/stockhome.html
2.select the third radio button (Display Updated Information via non intrusive notification every 10 seconds....)
3.press submit
4. new page loads, wait 10 seconds and a floating div is created and displayed
5. floating div is displayed for a few seconds then removed from DOM
6. new floating div is created and displayed every 10 seconds


Expected Results:  
JAWS 9 screen reader should speak the alert when it is displayed. Works in FF2.0.0.10 but not in minefield

Here are the relevant pieces from AccEvent for FF2 when div displays:
OBJ_HIDE	 Name="7.08" Role=editable text State=read only
OBJ_REORDER	 Name="Current Price:" Role=editable text State=read only,focusable
OBJ_SHOW	 Name="2.57" Role=editable text State=read only
OBJ_REORDER	 Name="Simple Stock Research AJAX Example" Role=document State=read only,focusable
OBJ_SHOW	 Name="Current Price of LFCY: $2.57" Role=alert State=invisible,offscreen

And when div is hidden (FF2)
OBJ_HIDE	 Name="Current Price of LFCY: $2.57" Role=alert State=normal
OBJ_REORDER	 Name="Simple Stock Research AJAX Example" Role=document State=read only,focusable

When div is shown in minefield:
(unknown)	 Name="Current Price:" Role=editable text State=read only,focusable
(unknown)	 Name="Simple Stock Research AJAX Example" Role=document State=read only,focusable
OBJ_HIDE	 Name=[bstr=NULL] Role=editable text State=read only,invisible,offscreen
(unknown)	 Name="Current Price:" Role=editable text State=read only,focusable
OBJ_SHOW	 Name="31.53" Role=editable text State=read only
OBJ_HIDE	 Name=[bstr=NULL] Role="wairole:alert" State=floating
(unknown)	 Name="Simple Stock Research AJAX Example" Role=document State=read only,focusable
OBJ_SHOW	 Name=[bstr=NULL] Role=alert State=floating
OBJ_REORDER	 Name="Simple Stock Research AJAX Example" Role=document State=read only,focusable

And when hidden (minefield)
(unknown)	 Name="Simple Stock Research AJAX Example" Role=document State=read only,focusable
OBJ_HIDE	 Name=[bstr=NULL] Role=alert State=invisible,offscreen
OBJ_REORDER	 Name="Simple Stock Research AJAX Example" Role=document State=read only,focusable
Assignee: nobody → aaronleventhal
Blocks: aria, fox3access
Component: Disability Access → Disability Access APIs
Keywords: access
Product: Firefox → Core
QA Contact: disability.access → accessibility-apis
We are getting good AT-SPI events for this example and Orca works fine.
Status: UNCONFIRMED → NEW
Ever confirmed: true
This also fixes menu events.
Severity: normal → major
Keywords: regression
Summary: accessibility: some ARIA alerts not spoken by screen readers in minefield → EVENT_ALERT and EVENT_MENUPOPUPSTART broken from bug 395909
Attachment #291559 - Flags: review?(Evan.Yan) → review+
Attachment #291559 - Flags: approval1.9?
Attachment #291559 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: