Bug 406019. EVENT_ALERT and EVENT_MENUPOPUPSTART broken for ARIA widgets. r=evan.yan, a=dsicore